--- a/RemoteChecker/Properties/launchSettings.json
+++ b/RemoteChecker/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:11951",
-      "sslPort": 44316
+      "applicationUrl": "http://localhost:56600",
+      "sslPort": 44385
     }
   },
   "profiles": {
@@ -15,8 +15,9 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "RemoteHostChecker": {
+    "RemoteChecker": {
       "commandName": "Project",
+      "dotnetRunMessages": "true",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
